# xiaozhi-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  repository.yaml  run.sh
app/: addon_options.py  announcement_audio.py  arbitration.py  audio_frames.py  audio_jobs.py  config.py  main.py  models.py  pending_confirmations.py  playback.py  remote_text_audio.py  remote_text_jobs.py  session_store.py
app/tts_providers/: __init__.py  base.py  doubao.py
config/: devices.example.yaml
docs/plans/: 2026-04-29-remote-text-audio-design.md  2026-04-29-remote-text-audio.md
specs/: 001-feature-doubao-announcement-mode.md  001-plan-doubao-announcement-mode.md  001-req-doubao-announcement-mode.md  002-plan-pending-confirmation-mcp.md  002-req-pending-confirmation-mcp.md  002-spec-pending-confirmation-mcp.md
tests/: test_active_context.py  test_addon_options.py  test_addon_static.py  test_announcement_api.py  test_announcement_audio.py  test_arbitration.py  test_devices.py  test_doubao_tts_provider.py  test_no_pending_confirmation_api.py  test_pending_confirmation_api.py  test_pending_confirmations.py  test_playback_sessions.py  test_remote_text_api.py  test_remote_text_audio.py  test_remote_text_jobs.py  test_remote_text_models.py  test_session_end.py
