[project]
name = "xiaozhi-gateway"
version = "0.1.10"
description = "Internal Xiaozhi wake arbitration and room context gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "opuslib>=3.0.1",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
